--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "image-js": "^1.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
