--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
-    "image-js": "^1.1.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "image-js": "^1.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/vite": "^4.1.17",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "daisyui": "^5.4.7",
-    "eslint": "^9.36.0",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "daisyui": "^5.5.5",
+    "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "typescript-eslint": "^8.48.0",
+    "vite": "npm:rolldown-vite@^7.1.14"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
