chore: remove vite rolldown due to compatibility issues / install missing package (react-router-dom)
Specifically after failing to install testing libraries

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gh-pages": "^6.3.0",
     "image-js": "^1.2.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -33,9 +34,6 @@
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "npm:rolldown-vite@^7.1.14"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "^7.1.14"
   }
 }
