--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "test": "vitest",
+    "test:run": "vitest run",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "prebuild": "npm run lint && npm run test:run"
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
